--- a/versue2.0/index.html
+++ b/versue2.0/index.html
@@ -180,7 +180,7 @@
                        
                     </div>
                 </div>
-                <center><img src="assets/img/portfolio/fullsize/gs.jpg" alt=""  width="600" height="200"></center>
+                <center><img src="assets/img/portfolio/fullsize/gs.jpg" alt=""  width="600"></center>
             </div>
              <div class="container">
                 <br>
